我就想改改

--- a/ajax.html
+++ b/ajax.html
@@ -87,6 +87,17 @@
                 指令
 
             暂存区
+
+            Git安装完成 配置 用户名 和 邮箱号 方便日后找事
+
+            git config --global user.name Mr.Pu
+            git config --global user.email 1048031773@qq.com
+            git config --list
+
+            git add . 将工作区所有改变的文件 添加到暂存区
+            git commit -m 自定义消息 将暂存区的内容 提交到本地仓库并生成一个版本
+            git status 检查暂存区状态
+            git log 查看本地仓库所有版本
         */
     </script>
 </head>
